# aoc_2023

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
challenges/day1/: CMakeLists.txt
challenges/day1/source/: main.cpp
challenges/day2/: CMakeLists.txt
challenges/day2/source/: main.cpp
challenges/day3/: CMakeLists.txt
challenges/day3/source/: main.cpp
challenges/day4/: CMakeLists.txt
challenges/day4/source/: main.cpp
challenges/day5/: CMakeLists.txt
challenges/day5/source/: main.cpp
challenges/day6/: CMakeLists.txt
challenges/day6/source/: main.cpp
